# solana-sigverify

./: .gitignore  Anchor.toml  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/tests/: audit.rs  e2e.rs  integration.rs
programs/batch-sigverify/: Cargo.toml
programs/batch-sigverify/src/: lib.rs
programs/batch-sigverify/tests/: cpi.rs  integration.rs  precompile.rs
