[package]
name = "test-client"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "batch_sigverify_sdk"
path = "src/lib.rs"

[[bin]]
name = "test-client"
path = "src/main.rs"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
anchor-lang = "0.29"
borsh = "0.10"
ed25519-dalek = "1.0"

[dev-dependencies]
ed25519-dalek = "1.0"
rand = "0.7"
solana-transaction-status = "1.18"
